objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Elogio</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Encerrada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Reclamação</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Encerrada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Reclamações</fullName>
        <description>Reclamações</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Encerrada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Responsabilidade Civil</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Encerrada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Solicitações</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Encerrada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sugestão</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Encerrada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sugestões</fullName>
        <description>Sugestões</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Encerrada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Assunto__c</fullName>
        <label>Assunto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comercialização</fullName>
                </value>
                <value>
                    <fullName>Espaços Publicitários</fullName>
                </value>
                <value>
                    <fullName>Sugestão/Informação</fullName>
                </value>
                <value>
                    <fullName>Trabalhe Conosco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Email_do_Cliente__c</fullName>
        <label>Email do Cliente</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Expectativa_de_Sinistro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expectativa de Sinistro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Foto__c</fullName>
        <label>Foto</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo_Shopping__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo Shopping</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Marca__c</fullName>
        <label>Marca</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Modelo__c</fullName>
        <label>Modelo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nivel_1__c</fullName>
        <label>Nível 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administracão</fullName>
                </value>
                <value>
                    <fullName>Area de atendimento</fullName>
                </value>
                <value>
                    <fullName>Área de atendimento</fullName>
                </value>
                <value>
                    <fullName>Arquitetura e Ambiente</fullName>
                </value>
                <value>
                    <fullName>Atendimento</fullName>
                </value>
                <value>
                    <fullName>Atendimento brigada</fullName>
                </value>
                <value>
                    <fullName>Clientes x loja</fullName>
                </value>
                <value>
                    <fullName>Clientes x loja/stands</fullName>
                </value>
                <value>
                    <fullName>Clientes x shopping</fullName>
                </value>
                <value>
                    <fullName>Comercialização lojas e quiosques</fullName>
                </value>
                <value>
                    <fullName>Contagem de estoque/balanço/troca de coleção e vitrine (até às 10h)</fullName>
                </value>
                <value>
                    <fullName>Do lojista</fullName>
                </value>
                <value>
                    <fullName>Envio de currículos para lojas</fullName>
                </value>
                <value>
                    <fullName>Envio de currículos para o shopping</fullName>
                </value>
                <value>
                    <fullName>Estacionamento</fullName>
                </value>
                <value>
                    <fullName>Informações diversas</fullName>
                </value>
                <value>
                    <fullName>Informações sobre cinema</fullName>
                </value>
                <value>
                    <fullName>Informações sobre eventos</fullName>
                </value>
                <value>
                    <fullName>Informações sobre lojas</fullName>
                </value>
                <value>
                    <fullName>Informações sobre quiosques</fullName>
                </value>
                <value>
                    <fullName>Limpeza</fullName>
                </value>
                <value>
                    <fullName>Limpeza e conservação</fullName>
                </value>
                <value>
                    <fullName>Loja/stands x shopping</fullName>
                </value>
                <value>
                    <fullName>Loja x shopping</fullName>
                </value>
                <value>
                    <fullName>Manutenção</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Mix de lojas</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
                <value>
                    <fullName>Prestadores de serviço</fullName>
                </value>
                <value>
                    <fullName>Segurança</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Nivel_2__c</fullName>
        <label>Nível 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Nivel_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atendimento</fullName>
                </value>
                <value>
                    <fullName>Estrutura da loja</fullName>
                </value>
                <value>
                    <fullName>Administracao</fullName>
                </value>
                <value>
                    <fullName>Area de atendimento</fullName>
                </value>
                <value>
                    <fullName>Arquitetura e ambiente</fullName>
                </value>
                <value>
                    <fullName>Conservação</fullName>
                </value>
                <value>
                    <fullName>Estacionamento</fullName>
                </value>
                <value>
                    <fullName>Manutenção</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Segurança</fullName>
                </value>
                <value>
                    <fullName>Área de atendimento</fullName>
                </value>
                <value>
                    <fullName>Estrutura banheiro familia</fullName>
                </value>
                <value>
                    <fullName>Estrutura fraldario</fullName>
                </value>
                <value>
                    <fullName>Serviços concierge/espaço cliente</fullName>
                </value>
                <value>
                    <fullName>Serviços do fraldário</fullName>
                </value>
                <value>
                    <fullName>Ações e promoções</fullName>
                </value>
                <value>
                    <fullName>Adminstração</fullName>
                </value>
                <value>
                    <fullName>Limpeza</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Telefone</fullName>
                </value>
                <value>
                    <fullName>Acidentes</fullName>
                </value>
                <value>
                    <fullName>Atendimento lojista</fullName>
                </value>
                <value>
                    <fullName>Furtos</fullName>
                </value>
                <value>
                    <fullName>Não conformidade cdc</fullName>
                </value>
                <value>
                    <fullName>Roubos</fullName>
                </value>
                <value>
                    <fullName>Troca de mercadorias</fullName>
                </value>
                <value>
                    <fullName>Cancela/sem parar</fullName>
                </value>
                <value>
                    <fullName>Cobrança</fullName>
                </value>
                <value>
                    <fullName>Dano ao shopping</fullName>
                </value>
                <value>
                    <fullName>Danos a motos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_NomeCompleto_Cliente__c</fullName>
        <label>Nome completo (wtc)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Observacao__c</fullName>
        <label>Observação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Placa__c</fullName>
        <label>Placa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Setor__c</fullName>
        <label>Setor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAC</fullName>
                </value>
                <value>
                    <fullName>CAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Sinistro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sinistro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Solucao__c</fullName>
        <label>Solução</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Telefone_do_Cliente__c</fullName>
        <label>Telefone do Cliente</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>TW1_Shopping__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos os ocorrências abertos</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Elogios</fullName>
        <active>true</active>
        <businessProcess>Elogio</businessProcess>
        <label>Elogios</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reclamaoes</fullName>
        <active>true</active>
        <businessProcess>Reclamação</businessProcess>
        <label>Reclamações</label>
    </recordTypes>
    <recordTypes>
        <fullName>Responsabilidade_Civil</fullName>
        <active>true</active>
        <businessProcess>Responsabilidade Civil</businessProcess>
        <label>Responsabilidade Civil</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solicitacoes</fullName>
        <active>true</active>
        <businessProcess>Solicitações</businessProcess>
        <label>Solicitações</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sugestoes</fullName>
        <active>true</active>
        <businessProcess>Sugestão</businessProcess>
        <label>Sugestões</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TW1_VR_Ocorrencia_Solicida_Dados_Veiculo</fullName>
        <active>false</active>
        <description>Caso nível 1 de reclamação seja igual a Estacionamento se faz necessário o preenchimento do veículo.</description>
        <errorConditionFormula>ISPICKVAL(TW1_Nivel_1__c, &apos;Estacionamento&apos;) &amp;&amp; (ISBLANK(TW1_Modelo__c) || ISBLANK(TW1_Marca__c) || ISBLANK(TW1_Placa__c))</errorConditionFormula>
        <errorMessage>Para ocorrências referente a &quot;Estacionamento&quot; se faz necessário o preenchimento da sessão dados do veículo.</errorMessage>
    </validationRules>
</CustomObject>